// Copyright 2018 LINE Corporation
//
// LINE Corporation licenses this file to you under the Apache License,
// version 2.0 (the "License"); you may not use this file except in compliance
// with the License. You may obtain a copy of the License at:
//
//   https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
// WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
// License for the specific language governing permissions and limitations
// under the License.

// Tests for flow-control of gRPC services and clients. Some tests will overlap with business logic
// unit tests, but since flow-control is hard to get right we separate them out here.

syntax = "proto3";

package armeria.grpc.testing;

option java_package = "testing.grpc";

import "testing/grpc/messages.proto";

service FlowControlTestService {
    // Neither server nor control exert backpressure.
    rpc NoBackPressure(stream SimpleRequest) returns (stream SimpleResponse);

    // Server exerts back presure to client. Client must not produce
    // more messages than the server requests.
    rpc ServerBackPressure(stream SimpleRequest) returns (stream SimpleResponse);

    // Client exerts back pressure to server. Server must not produce
    // more messages than the client requests.
    rpc ClientBackPressure(stream SimpleRequest) returns (stream SimpleResponse);
}
